# sistema-helpdesk13

./: .replit  LIMPAR_BANCO.py  activity_logger.py  app.py  app_backup.py  backup_manager.py  cloud_backup_manager.py  cloud_license_api.py  enhanced_logging.py  gunicorn.conf.py  metrics_dashboard.py  monitoring_system.py  replication_manager.py  replit.md  requirements.txt  run_production.py  sistema_os.db  start.cmd  validation_rules.py
blueprints/: admin.py  tickets.py  users.py
instance/: sistema_os.db  sistema_os.db-shm  sistema_os.db-wal
projeto-temp/: .env  .replit  api_endpoints.py  api_security.py  app.py  app_refactored.py  basic_tests.py  config.py  cookies.txt  models.py  requirements.txt  requirements_clean.txt  sistema_os.db  type_fixes.py
sistema-helpdesk13/: .replit
static/: sw.js
temp_clone/: GUIA_INSTALACAO.txt  USAR.py  admin_dashboard.py  config.py  filters.py  initialize_production.py  replit.md  requirements.txt  start.cmd
temp_repo/: .env.example  INICIAR.bat  app.py  database_safety.py  license_generator.py  license_manager.py  maintenance_scheduler.py  models.py  production_manager.py  pyproject.toml  sistema_os.db
temp_repo/backups/: sistema_os_backup_manual_20250914_183304.db
temp_repo/static/css/: custom.css
temp_repo/static/js/: form-validation.js
temp_repo/templates/: admin_sistema.html  admin_usuarios.html  chamado_fechar.html  chamado_view.html  chamados_list.html  fechar_chamado.html  fechar_os.html  users.html  usuarios_form.html
temp_repo/templates/admin/: audit.html  monitoring.html
templates/: _base.html  (+14 more)
(+46 files in other folders)
