[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.1",
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psutil>=7.1.0",
    "pyopenssl>=25.3.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "xlsxwriter>=3.2.9",
]
